<resources>
    <string name="app_name">E-Office Bộ TT và TT</string>
    <string name="api_base_url_boTTTT">http://123.31.10.45</string>
    <!--<string name="api_base_url_boTTTT">https://vanban.mic.gov.vn</string>-->

    <!-- Drawer Items -->
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>
    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <!--Van Ban den-->
    <string name="drawer_item_come_watting">Văn bản chờ xử lý</string>
    <string name="drawer_item_come_processed">Văn bản đã xử lý</string>
    <string name="drawer_item_come_saved">Văn bản đã lưu</string>
    <string name="drawer_item_come_all">Tất cả văn bản đến</string>
    <!--Van Ban di-->
    <string name="drawer_item_go_watting">Văn bản chờ ký duyệt</string>
    <string name="drawer_item_go_signed">Văn bản đã ký duyệt</string>
    <string name="drawer_item_go_refuse">Văn bản từ chối ký duyệt</string>
    <string name="drawer_item_go_all">Tất cả Văn bản đi</string>

    <!--Login-->
    <string name="REMEMBER_LABEL">Ghi nhớ tài khoản</string>
    <string name="LOGIN_BTN_LABEL">Đăng nhập</string>
    <string name="tenDangNhap">Tên đăng nhập</string>
    <string name="matKhau">Mật khẩu</string>
    <string name="ho_tro_ky_thuat">Hỗ trợ kỹ thuật</string>
    <string name="dieu_hanh">dieuhanh@mic.gov.vn</string>

    <string name="CLOSE_BUTTON">Đóng lại</string>
    <string name="ACCEPT_BUTTON">Đồng ý</string>
    <string name="USERNAME_REQUIRED">Bạn chưa nhập Username</string>
    <string name="PASSWORD_REQUIRED">Bạn chưa nhập Mật khẩu</string>
    <string name="PASSWORD_INVALID_LENGTH">Password ít nhất phải dài 8 ký tự</string>
    <string name="PASSWORD_INVALID_STRENGTH">Password phải bao gồm số, chữ cái thường, chữ cái hoa và ký tự đặc biệt</string>
    <string name="USERNAME_INVALID_LENGTH">Username chỉ được nhập không quá 30 ký tự</string>
    <string name="LOGIN_TITLE_ERROR">LỖI ĐĂNG NHẬP</string>

    <string name="LOGINING_REQUEST">Đang đăng nhập hệ thống</string>
    <string name="LOGIN_INVALID">Thông tin đăng nhập không chính xác</string>

    <!--Type chi tiết văn bản-->
    <string name="THONG_TIN_VAN_BAN">Thông tin công văn bản</string>
    <string name="NOI_DUNG_TRINH_KY">Nội dung trình ký</string>
    <string name="VAN_BAN_LIEN_QUAN">Văn bản liên quan</string>
    <string name="FILE_DINH_KEM">File văn bản khác</string>
    <string name="FILE_LIEN_QUAN">File liên quan</string>
    <string name="TONG_HOP_XU_LY">Tổng hợp xử lý</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Detail-->
    <string name="tv_don_vi">Đơn vị: </string>
    <string name="tv_ca_nhan">Cá nhân: </string>
    <string name="tv_nhom_ca_nhan">Nhóm cá nhân: </string>
    <string name="tv_thongtin_cong_van">Thông tin công văn </string>
    <string name="tv_so_ky_hieu">Số ký hiệu: </string>
    <string name="tv_co_quan_ban_hanh">Cơ quan ban hành: </string>
    <string name="tv_hinh_thuc">Hình thức: </string>
    <string name="tv_do_mat">Độ mật: </string>
    <string name="tv_do_khan">Độ khẩn: </string>
    <string name="tv_linh_vuc">Lĩnh vực: </string>
    <string name="tv_ngay_van_ban">Ngày văn bản: </string>
    <string name="tv_ngay_den">Ngày đến: </string>
    <string name="tv_hinh_thuc_gui">Hình thức gửi: </string>

    <!--Chon don vi-->
    <string name="tv_chon_don_vi">Chọn đơn vị </string>

    <string name="str_no_data">Không có dữ liệu</string>
    <string name="str_trich_yeu">Trích yếu, số kí tự</string>
    <string name="str_van_ban_cho_ky_duyet">Văn bản chờ ký duyệt</string>
    <string name="str_hinh_thuc">Hình thức:</string>
    <string name="str_do_mat">Độ mật:</string>
    <string name="str_do_khan">Độ khẩn:</string>
    <string name="str_linh_vuc">Lĩnh vực:</string>
    <string name="str_don_vi">Đơn vị:</string>
    <string name="str_phong_ban_trinh_ky">Phòng ban trình ký:</string>
    <string name="str_thoi_gian_soan_thao">Thời gian soạn thảo:</string>
    <string name="str_noi_nhan_van_ban">Nơi nhận văn bản:</string>

    <string name="str_nhap_noi_dung">Nhập nội dung chỉ đạo (2000)</string>

    <string name="tv_trich_yeu">Trích yếu:</string>
    <string name="tv_noidung_chidao">Nội dung chỉ đạo:</string>
    <string name="tv_nguoi_ky">Người ký:</string>
    <string name="tv_ngay_ban_hanh">Ngày ban hành:</string>
    <string name="tv_file_van_ban">File văn bản khác</string>
    <string name="tv_van_ban_lien_quan">Văn bản liên quan</string>
    <string name="str_noi_dung_chi_dao">Nhập nội dung chỉ đạo (2000):</string>
    <string name="str_trich_yeu_2">Trích yếu:</string>
    <string name="str_ngay_trinh">Ngày trình:</string>
    <string name="str_file_dinh_kem">File đính kèm:</string>
    <string name="str_luu">Lưu</string>
    <string name="str_mau">Mẫu</string>

    <!--Danh sach tat ca file-->
    <string name="str_title_file">Danh sách tất cả tệp</string>

    <!--error-->
    <string name="DOWNLOAD_TITLE_ERROR">LỖI TẢI FILE</string>
    <string name="DOWNLOAD_FILE_ERROR">Không thể tải file về thiết bị</string>
    <string name="str_underline_botttt"><u>Tìm theo toàn bộ Bộ TTTT</u></string>
    <string name="str_underline_user_da_tim_kiem"><u>Tìm cá nhân hay chuyển</u></string>
</resources>
